--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
+    "paths": {
+      "ngx-structure-viewer": [
+        "./dist/ngx-structure-viewer"
+      ]
+    },
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
