--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
+    "angular-cli-ghpages": "^1.0.7",
     "eslint": "^8.54.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
