--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.8.5",
     "molstar": "^3.43.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
