--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@types/d3": "^7.4.3",
+    "bootstrap-icons": "^1.11.3",
     "d3": "^7.8.5",
     "molstar": "^3.43.0",
     "rxjs": "~7.8.0",
