--- a/projects/ngx-structure-viewer/package.json
+++ b/projects/ngx-structure-viewer/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ngx-structure-viewer",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "peerDependencies": {
     "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "molstar": "^3.44.0",
+    "rxjs": "~7.8.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
