Added license to demo application; Added license to libraries, by using symlink (could not import assets from outside project root with ng-packagr builder

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "projects/demo-showcase/src/favicon.ico",
-              "projects/demo-showcase/src/assets"
+              "projects/demo-showcase/src/assets",
+              { "input": "./", "glob": "LICENSE.*", "output": "./" }
             ],
             "styles": [
               "projects/demo-showcase/src/styles.scss"
