--- a/projects/ngx-structure-viewer/package.json
+++ b/projects/ngx-structure-viewer/package.json
@@ -1,6 +1,11 @@
 {
   "name": "ngx-structure-viewer",
   "version": "0.0.4",
+  "license": "MIT",
+  "author": {
+    "name": "Damiano Clementel",
+    "email": "damiano.clementel@gmail.com"
+  },
   "peerDependencies": {
     "@angular/common": "^17.0.0",
     "@angular/core": "^17.0.0",
