--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,18 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "paths": {
-      "@ngx-structure-viewer": [ "./projects/ngx-structure-viewer/src/public-api" ],
+      "@ngx-structure-viewer": [ 
+        "./projects/ngx-structure-viewer/src/public-api" 
+      ],
       "@ngx-features-viewer": [
         "./projects/ngx-features-viewer/src/public-api"
       ],
-      "ngx-sequence-viewer": [
-        "./dist/ngx-sequence-viewer"
+      "@ngx-sequence-viewer": [
+        "./projects/ngx-sequence-viewer/src/public-api"
       ],
+      // "ngx-sequence-viewer": [
+      //   "./dist/ngx-sequence-viewer"
+      // ],
       // "ngx-features-viewer": [
       //   "./dist/ngx-features-viewer",
       // ],
