--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap-icons": "^1.11.3",
     "d3": "^7.9.0",
     "molstar": "^4.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.4"
@@ -38,6 +40,7 @@
     "@angular/cli": "^17.3.1",
     "@angular/compiler-cli": "^17.3.1",
     "@types/jasmine": "~5.1.4",
+    "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
     "angular-cli-ghpages": "^1.0.7",
