--- a/projects/ngx-features-viewer/package.json
+++ b/projects/ngx-features-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-features-viewer",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "MIT",
   "author": {
     "name": "Damiano Clementel",
@@ -8,7 +8,9 @@
   },
   "peerDependencies": {
     "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "rxjs": "~7.8.1",
+    "d3": "^7.9.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
