Updates calculation of sequence characters' width

--- a/angular.json
+++ b/angular.json
@@ -139,7 +139,8 @@
             "polyfills": [
               "zone.js",
               "zone.js/testing"
-            ]
+            ],
+            "assets": ["projects/ngx-structure-viewer/src/assets"]
           }
         },
         "lint": {
