--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.11",
     "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.14.10",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "6.21.0",
