Resets original pipes; Disables highlights (must be reactivated); Removes background flickering from Mol*

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
             "styles": [
               "projects/demo-showcase/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
