Introduces lazy loading for MolStar in ngx-structure-viewer

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,13 @@
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "react-dom/client",
+              "react/jsx-runtime",
+              "react",
+              "inline-style-parser",
+              "extend"
             ]
           },
           "configurations": {
