--- a/angular.json
+++ b/angular.json
@@ -217,12 +217,12 @@
           "configurations": {
             "production": {
               "tsConfig": "projects/ngx-sequence-viewer/tsconfig.lib.prod.json"
-            },
+            }, 
             "development": {
               "tsConfig": "projects/ngx-sequence-viewer/tsconfig.lib.json"
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
