--- a/projects/ngx-sequence-viewer/tsconfig.lib.prod.json
+++ b/projects/ngx-sequence-viewer/tsconfig.lib.prod.json
@@ -2,7 +2,8 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
